src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.header, .index-header, .work-header, .contact-header {
	position: relative;
	height: 100vh;
	background-position: center;
}

.index-header h1 {
	font-size: 60px;
}

.index-card {
	height: 100%;
}

.index-header {
	background-image: url("./components/img/paddle_board.jpg");
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
	width: 100%;
	height: 100vh;
}

.work-header {
	background-image: url("./components/img/work.jpeg");
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
	width: 100%;
	height: 100vh;
}

.overlay {
	position: absolute;
	min-height: 100%;
	min-width: 100%;
	left: 0;
	top: 0;
	background: rgba(0, 0, 0, 0.75);
}

.description {
	position: absolute;
	top: 25%;
	margin: auto;
	padding: 2em;
}

.description {
	color: #fff;
}

.text-white {
	color: #fff;
}
.text-black {
	color: #000;
}

.thoughtsDescription {
	position: absolute;
	top: 50%;
	left: 50%;
	margin: auto;
	transform: translate(-50%, -50%);
	padding: 2em;
	text-align: center;
}

.thoughtsDescription h1, p {
	color: #F5F5F5;
}

.thoughtsDescription  p{
	font-size: small;
}

#firstArticle {
	background-image: url(/assets/images/thoughtsFront.jpg);
}

.card-body p {
	color: #455D7A;
}

.bg-transparent {
	background-color: transparent;
}

.navbar {
	position: relative;
}

.footer {
	background-color: rgb(50, 51, 58);
}

.text-dark {
	color: black;
}

.text-light {
	color: white;
}

.text-center {
	text-align: center;
}

.extra-small {
	font-size: 8px;
}
.course-desc {
	color: #455D7A;
}

.vertical-center {
	min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
	display: flex;
	align-items: center;
  }

.break-section {
	background-image: url("./components/img/work.jpeg");
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
	width: 100%;
	height: 100%;
}

.project-image {
	height: 5px;
	max-width: 100%;
	max-height: 100%;
	min-height: 100%;
	background-repeat: no-repeat;
	background-position: center;
}

.footer-icon {
	max-height: 1.5rem;
	min-height: 1.5rem;
	height: 30px;
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
	margin: 5px;
}

.home-icon {
	max-height: 4rem;
	min-height: 4rem;
	height: 30px;
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
	margin: 5px;
}

@media screen and (max-width: 600px) {

	.project-image {
	  visibility: hidden;
	  clear: both;
	  float: left;
	  margin: 10px auto 5px 20px;
	  width: 28%;
	  display: none;
	}

	.mobile-empty {
	  visibility: hidden;
	  clear: both;
	  float: left;
	  margin: 10px auto 5px 20px;
	  width: 28%;
	  display: none;
	}

	.mobile-center {
		text-align: center;
		align-self: center;
		justify-content: center;
	}
  }

@media screen and (min-width: 600px) {
	.desk-empty {
		visibility: hidden;
		clear: both;
		float: left;
		margin: 10px auto 5px 20px;
		width: 28%;
		display: none;
	  }
}

.floatingBottomRight {
  position: fixed;
  right: 20px;
  bottom: 20px;
  border-radius: 12px;
  max-width: 300px;
}

